--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Camp Survival - Golden Master</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Assets/style.css">
     <script type="importmap">
         {
             "imports": {
                 "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
                 "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
             }
-        }
+        }  
     </script>
 </head>
 <body>
@@ -62,6 +62,6 @@
         <div id="blood-vignette"></div>
     </div>
 
-    <script type="module" src="game.js"></script>
+    <script type="module" src="Assets/script.js"></script>
 </body>
 </html>
